--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,25 +13,29 @@ jobs:
     steps:
       # 1️⃣ Get your code from the repo
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # 2️⃣ Setup Node.js so we can run npm
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
+          cache-dependency-path: portfolio/package-lock.json
 
-      # 3️⃣ Install dependencies from package.json
+      # 3️⃣ Install dependencies from package.json (in portfolio folder)
       - name: Install dependencies
         run: npm install
+        working-directory: portfolio
 
       # 4️⃣ Build the Vite project (output goes into dist/)
       - name: Build project
         run: npm run build
+        working-directory: portfolio
 
       # 5️⃣ Deploy dist/ folder to gh-pages branch
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./portfolio/dist
