--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,19 +19,21 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: 'npm'
           cache-dependency-path: portfolio/package-lock.json
 
       # 3️⃣ Install dependencies from package.json (in portfolio folder)
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: portfolio
 
       # 4️⃣ Build the Vite project (output goes into dist/)
       - name: Build project
         run: npm run build
         working-directory: portfolio
+        env:
+          NODE_ENV: production
 
       # 5️⃣ Deploy dist/ folder to gh-pages branch
       - name: Deploy to GitHub Pages
