--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,5 +24,5 @@
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   },
-  "homepage": "https://keatyee.github.io/keatyee/"
+  "homepage": "https://keatyee.github.io"
 }
