--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
+    "matter-js": "^0.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
